IF(QT_FOUND)
#  ADD_SUBDIRECTORY(corner-detection-css)
  ADD_SUBDIRECTORY(flood-filler)
  ADD_SUBDIRECTORY(hough-line)
  ADD_SUBDIRECTORY(mean-shift)
  ADD_SUBDIRECTORY(region-detection)
  ADD_SUBDIRECTORY(region-curvature)
  ADD_SUBDIRECTORY(simple-blob-searcher)
  ADD_SUBDIRECTORY(vector-tracker)
ENDIF()

IF(QT_FOUND AND IPP_FOUND)
  ADD_SUBDIRECTORY(template-matching)
ENDIF()

IF(OPENCV_FEATURES_2D_FOUND)
  ADD_SUBDIRECTORY(orb-feature-detection)
  ADD_SUBDIRECTORY(heart-rate-detector)
ENDIF()
